# MCP-Jobs

./: .ai_state.json  .gitignore  README.md  README_EN.md  config.yaml  config.yaml.example  config_pracecz_jobs.yaml  mcp-jobs.bat  pyproject.toml  requirements.txt
docs/: MCP-Jobs_v0.3.1_audit.docx  audit_prompt.docx  audit_prompt_v1.1.docx  audit_report_claude.md  development_plan_report.docx  iteration3_analysis.txt  n00_template_pitevni_knihy.md  n02_pitevni_kniha_20260714.md  semanticka_analyza_a_plan.md
output/: etl_results.json
scripts/: analyze_pipeline.py  compare_legacy_vs_mcp.py  generate_final_report.py  init.ps1  run_etl.py  run_etl_metrics.py  run_livetests.py  run_pipeline_test.py  test_exclude.py
src/mcp_jobs/: __init__.py  cli.py  config.py  http.py  matcher.py  models.py  pipeline.py  server.py  storage.py  utils.py
src/mcp_jobs/providers/: __init__.py  base.py  bazos.py  jobs.py  nyx.py  pracecz.py
tests/: live_scrapers.py  synthetic_guardrails.py  test_config.py  test_matcher.py  test_pipeline.py  test_providers.py  test_server.py  test_utils.py
