[project]
name = "mcp-jobs"
version = "0.1.0"
description = "MCP server for CZ job portal search and EROI analysis"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
mcp-jobs = "mcp_jobs.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
