[project]
name = "mcp-jobs"
version = "0.4.0"
description = "MCP server for CZ job portal search — live scraping, boolean matching, EROI analysis"
authors = [
    {name = "Ondřej Soušek", email = "outpost2026@github.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
mcp-jobs = "mcp_jobs.cli:main"

[project.urls]
Source = "https://github.com/outpost2026/MCP-Jobs"
Issues = "https://github.com/outpost2026/MCP-Jobs/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
